# TempCLI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: index.md  quickstart.md
docs/reference/: index.md
src/tempcli/: __init__.py  config.py
src/tempcli/core/: pipeline.py
src/tempcli/core/components/: alias_map.py  data.py  func.py
src/tempcli/core/support/: interfaces.py  manager.py
src/tempcli/core/types/: alias.py  func_component.py  result.py
tests/: conftest.py
tests/component/: conftest.py  test_alias_map.py  test_data_source.py  test_fn.py
tests/helpers/: component_helpers.py  function_helpers.py
tests/integration/: manager.py
tests/unit/: test_alias.py  test_base_types.py
