[project]
name = "tempcli"
version = "0.1.0"
description = "quick command line for data validation, etc."
readme = "README.md"
authors = [
    { name = "mendozasho", email = "shomendoza@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mkdocstrings>=0.30.1",
    "pandas>=2.3.2",
    "typer>=0.19.2",
]

[project.scripts]
tempcli = "tempcli:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.16.1",
]
